Bug 248348 - kdeinit4 crash at startup when creating NetworkManagementService instance [invalid QDBusMessage::arguments, QDBusPendingReplyData::argumentAt, ..., NMDBusSettingsConnectionProvider::initConnections]
Summary: kdeinit4 crash at startup when creating NetworkManagementService instance [in...
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: KDED Module (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Will Stephenson
URL:
Keywords:
: 246121 249099 256325 257681 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-08-19 10:33 UTC by Grégoire Paris
Modified: 2011-02-28 06:33 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Grégoire Paris 2010-08-19 10:33:52 UTC
Application: kded4 ($Id: kded.cpp 1031637 2009-10-05 16:58:19Z lunakl $)
KDE Platform Version: 4.4.2 (KDE 4.4.2)
Qt Version: 4.6.2
Operating System: Linux 2.6.32-020632-generic x86_64
Distribution: Ubuntu 10.04.1 LTS

-- Information about the crash:
This occurs every time I start my computer. This seems related to the NetworkManagementService instance creation.

The crash can be reproduced every time.

 -- Backtrace:
Application: Démon de KDE (kdeinit4), signal: Segmentation fault
[KCrash Handler]
#5  QList (this=0x10) at ../../include/QtCore/../../src/corelib/tools/qlist.h:114
#6  QDBusMessage::arguments (this=0x10) at qdbusmessage.cpp:664
#7  0x00007f14363b4e3d in QDBusPendingReplyData::argumentAt (this=0x7fffb5d2f9a0, index=0) at qdbuspendingreply.cpp:268
#8  0x00007f14270f1417 in argumentAt<0> (this=0x1b195a0) at /usr/include/qt4/QtDBus/qdbuspendingreply.h:174
#9  QDBusPendingReply<QList<QDBusObjectPath>, void, void, void, void, void, void, void>::operator QList<QDBusObjectPath> (this=0x1b195a0) at /usr/include/qt4/QtDBus/qdbuspendingreply.h:184
#10 NMDBusSettingsConnectionProvider::initConnections (this=0x1b195a0) at ../../../backends/NetworkManager/nmdbussettingsconnectionprovider.cpp:81
#11 0x00007f14270f1c20 in NMDBusSettingsConnectionProvider (this=0x1b195a0, connectionList=<value optimized out>, service=..., parent=0x1b0a260)
    at ../../../backends/NetworkManager/nmdbussettingsconnectionprovider.cpp:63
#12 0x00007f1427779771 in NetworkManagementService (this=0x1b2b660, parent=<value optimized out>) at ../../kded/service.cpp:105
#13 0x00007f142777a277 in KPluginFactory::createInstance<NetworkManagementService, QObject> (parentWidget=<value optimized out>, parent=<value optimized out>, args=...)
    at /usr/include/kpluginfactory.h:461
#14 0x00007f143956c96c in KPluginFactory::create (this=0x1b0d450, iface=0x7f14395b3920 "KDEDModule", parentWidget=<value optimized out>, parent=0x19b5640, args=..., keyword=<value optimized out>)
    at ../../kdecore/util/kpluginfactory.cpp:191
#15 0x00007f142d01a5ce in KPluginFactory::create<KDEDModule> (this=0x19b5640, s=<value optimized out>, onDemand=<value optimized out>) at ../../kdecore/util/kpluginfactory.h:491
#16 Kded::loadModule (this=0x19b5640, s=<value optimized out>, onDemand=<value optimized out>) at ../../kded/kded.cpp:376
#17 0x00007f142d01ba91 in Kded::loadSecondPhase (this=<value optimized out>) at ../../kded/kded.cpp:265
#18 0x00007f142d01e5df in KdedAdaptor::loadSecondPhase (this=0x19b5920, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffb5d30280) at ../../kded/kdedadaptor.cpp:80
#19 KdedAdaptor::qt_metacall (this=0x19b5920, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffb5d30280) at ./kdedadaptor.moc:102
#20 0x00007f143637b486 in QDBusConnectionPrivate::deliverCall (this=<value optimized out>, object=<value optimized out>, msg=<value optimized out>, metaTypes=..., slotIdx=<value optimized out>)
    at qdbusintegrator.cpp:904
#21 0x00007f143637c6ef in QDBusConnectionPrivate::activateCall (this=<value optimized out>, object=0x19b5920, flags=273, msg=...) at qdbusintegrator.cpp:809
#22 0x00007f143637d1cd in QDBusConnectionPrivate::activateObject (this=<value optimized out>, node=<value optimized out>, msg=..., pathStartPos=<value optimized out>) at qdbusintegrator.cpp:1364
#23 0x00007f143637d468 in QDBusActivateObjectEvent::placeMetaCall (this=0x1aef010) at qdbusintegrator.cpp:1477
#24 0x00007f1437fc6d49 in QObject::event (this=0x19b5640, e=0x1aef010) at kernel/qobject.cpp:1248
#25 0x00007f143715322c in QApplicationPrivate::notify_helper (this=0x19b6480, receiver=0x19b5640, e=0x1aef010) at kernel/qapplication.cpp:4300
#26 0x00007f14371596fb in QApplication::notify (this=0x7fffb5d30ff0, receiver=0x19b5640, e=0x1aef010) at kernel/qapplication.cpp:4183
#27 0x00007f14384fe526 in KApplication::notify (this=0x7fffb5d30ff0, receiver=0x19b5640, event=0x1aef010) at ../../kdeui/kernel/kapplication.cpp:302
#28 0x00007f1437fb706c in QCoreApplication::notifyInternal (this=0x7fffb5d30ff0, receiver=0x19b5640, event=0x1aef010) at kernel/qcoreapplication.cpp:704
#29 0x00007f1437fb97e7 in QCoreApplication::sendEvent (receiver=0x0, event_type=<value optimized out>, data=0x192dc30) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#30 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=<value optimized out>, data=0x192dc30) at kernel/qcoreapplication.cpp:1345
#31 0x00007f1437fe09d3 in QCoreApplication::sendPostedEvents (s=<value optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#32 postEventSourceDispatch (s=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:276
#33 0x00007f14333988c2 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#34 0x00007f143339c748 in ?? () from /lib/libglib-2.0.so.0
#35 0x00007f143339c8fc in g_main_context_iteration () from /lib/libglib-2.0.so.0
#36 0x00007f1437fe0513 in QEventDispatcherGlib::processEvents (this=0x192f140, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:412
#37 0x00007f143720346e in QGuiEventDispatcherGlib::processEvents (this=0x7fffb5d2f830, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#38 0x00007f1437fb5992 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#39 0x00007f1437fb5d6c in QEventLoop::exec (this=0x7fffb5d30f40, flags=) at kernel/qeventloop.cpp:201
#40 0x00007f1437fb9aab in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#41 0x00007f142d01cd47 in kdemain (argc=<value optimized out>, argv=<value optimized out>) at ../../kded/kded.cpp:932
#42 0x00000000004070f3 in launch (argc=1, _name=<value optimized out>, args=<value optimized out>, cwd=<value optimized out>, envc=0, envs=<value optimized out>, reset_env=false, tty=0x0, 
    avoid_loops=false, startup_id_str=0x40a4f9 "0") at ../../kinit/kinit.cpp:717
#43 0x000000000040902f in main (argc=<value optimized out>, argv=<value optimized out>, envp=<value optimized out>) at ../../kinit/kinit.cpp:1788

Reported using DrKonqi
Comment 1 Christoph Feck 2010-11-08 22:53:10 UTC
*** Bug 249099 has been marked as a duplicate of this bug. ***
Comment 2 Christoph Feck 2010-11-08 22:53:25 UTC
*** Bug 256325 has been marked as a duplicate of this bug. ***
Comment 3 Dario Andres 2010-11-24 19:30:11 UTC
[Comment from a bug triager]
Bug 257681 has some data which could be relevant (or not):
-- Information about the crash:
When users home is at nfs (in this case: /home/nfs/<user>) and user not in
/etc/passwd, /etc/group (looked up via pam ldap) kde4 crashes at start.
info: policykit1-kde crashes too.
Comment 4 Dario Andres 2010-11-24 19:30:19 UTC
*** Bug 257681 has been marked as a duplicate of this bug. ***
Comment 5 Dario Andres 2011-01-23 18:42:00 UTC
[Comment from a bug triager]
From bug 246121:
-- Information about the crash:
with a normal startup I got to the X login prompt which accepted my
username+password, progressed a little and then restarted X.
I rebooted in recovery mode and ran startx from the command line. X+KDE seemed
to start fine but then this crash happened.
Comment 6 Dario Andres 2011-01-23 18:42:16 UTC
*** Bug 246121 has been marked as a duplicate of this bug. ***
Comment 7 Lamarque V. Souza 2011-02-28 06:33:17 UTC
Git commit 3a1fd6c42c08f9aa6efb1508f360e5a904ebf2e3 by Lamarque V. Souza.
Committed on 28/02/2011 at 06:00.
Pushed by lvsouza into branch 'master'.

Fix potential crash.

BUG: 248348

M  +7    -4    backends/NetworkManager/nmdbussettingsconnectionprovider.cpp     

http://commits.kde.org/networkmanagement/3a1fd6c42c08f9aa6efb1508f360e5a904ebf2e3