Fix potential crash.

BUG: 248348